# QLU-personal

./: README.md  a100_finetuning.ipynb  aisearch_stream.ipynb  id_ed25519.pub  id_rsa.pub  onboarding_task_dataset_v3.jsonl  prompt_test.ipynb
company_diff_check/diff/ai-Qlu2-backend/: .dockerignore  .env.template  .gitignore  Dockerfile  Jenkinsfile  main.py  pyproject.toml  readme.md  toolkits.py
company_diff_check/diff/ai-Qlu2-backend/.github/workflows/: CODEOWNERS  black-formatter.yml  slack-notifications.yml
company_diff_check/diff/ai-Qlu2-backend/app/: api.py
company_diff_check/diff/ai-Qlu2-backend/app/core/: auth.py  config.py  database.py  events.py
company_diff_check/diff/ai-Qlu2-backend/app/models/schemas/: ai_search_v3.py  (+29 more)
company_diff_check/diff/ai-Qlu2-backend/app/routes/: dependancies.py  get_similar_profiles_extension.py  industry_NER.py  name_search.py  post_autocomplete.py  post_company_competitors.py  post_company_evaluation.py  post_company_generation.py  post_demographics.py  post_etl_functional_area.py  post_financial_filters.py  post_group_revenue.py  post_location_mapping.py  post_salary.py  post_shorten_prompt.py  post_similar_profiles.py  post_skills_domains.py  post_skills_industries.py  post_suggest_terms.py
company_diff_check/diff/ai-Qlu2-backend/tests/: misc.py  test_autocomplete.py  test_financialdata.py  test_financials.py  test_financialsummary.py  test_functions.py  test_generate_companies.py  test_groups.py  test_location_mapping.py  test_outreach.py  test_person_salary.py  test_products_services.py  test_ranks.py  test_similar_profiles.py  test_skills_and_industries.py  test_skills_domains.py  test_stocks.py  test_suggest_terms.py
(+483 files in other folders)
