[tool.poetry]
name = "qlu2-ai-backend"
version = "1.2.0-alpha"
description = "FastAPI backend server for AI services working in QLU-2"
authors = ["hassan@qlu.ai"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
aiohttp = "^3.12.14"
aiocsv = "^1.3.2"
aiohappyeyeballs = "^2.4.0"
asyncpg = "^0.29.0"
beautifulsoup4 = "^4.12.3"
elasticsearch = "^8.18.0"
elasticsearch-dsl = "^8.18.0"
pandas = "^2.2.2"
numpy = "^2.1.1"
openai = "^1.76.0"
httpx = "^0.28.1"
httpx-sse = "^0.4.0"
psycopg = {extras = ["binary"], version = "^3.2.2"}
sqlalchemy = "^2.0.36"
pydantic = "^2.9.1"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.19"
tqdm = "^4.66.5"
requests = "^2.32.4"
urllib3 = "^2.5.0"
google-cloud-storage = "^2.18.2"
assemblyai = "^0.37.0"
groq = "^0.18.0"
scikit-learn = "^1.6.0"
moviepy = "^2.1.1"
CurrencyConverter = "^0.17.17"
yfinance = "^0.2.43"
lxml = "^5.3.0"
rapidfuzz = "^3.9.7"
tiktoken = "^0.7.0"
influxdb-client = "^1.46.0"
ulid-py = "^1.1.0"
reactivex = "^4.0.4"
forex-python = "^1.8"
tenacity = "^9.0.0"
simplejson = "^3.19.3"
html2text = "^2024.2.26"
pillow = "^10.4.0"
jaro-winkler = "^2.0.3"
fuzzywuzzy = "^0.18.0"
fuzzysearch = "^0.7.3"
tldextract = "^5.3.0"
python-levenshtein = "^0.27.1"
aiomysql = "^0.2.0"
redis = "^6.1.0"
protobuf = "5.29.5"
pyparsing = "^3.2.3"
qdrant-client = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"